Create Users API request
